# libs-dev

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  flake.nix  libs-dev.code-workspace
.devcontainer/: devcontainer.json  postCreate.sh
cmake/config/: ESP32.cmake  F3H.cmake  F3He.cmake  F4H.cmake  F4M.cmake  Host.cmake
rust-test/: Cargo.toml
rust-test/rust_test/: Cargo.toml
rust-test/rust_test/src/: main.rs
rust-test/serial_test/: Cargo.toml
rust-test/serial_test/src/: main.rs
tests/: default.nix
tests/smbed/: CMakeLists.txt  main.cpp
utils/scripts/: ansi_color_test.sh  fix-vars.sh
